# plugins.cpp

./: CMakeLists.txt  README.md  main.cpp  my_plugin.cpp  plugin_api.h
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  flawfinder.yml
